tests/reject/unknown_var.ty
# the compiler must reject a read of an undeclared variable
fn main():
    print(nosuchvar)
